compiler/parse/TParser.java
// Generated from T.g4 by ANTLR 4.7.1
package tc.compiler.parse;

  import tc.compiler.Location;
  import tc.compiler.tree.*;
  import static tc.compiler.parse.TreeBuilder.*;
  import java.util.List;
  import java.util.ArrayList;
  import tc.compiler.tree.type.*;
  import java.lang.Integer;
  import java.lang.String;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_LITERAL=1, LPAREN=2, RPAREN=3, LBRACK=4, RBRACK=5, LSQBRACK=6, 
		RSQBRACK=7, SEMICOLON=8, PLUS=9, MINUS=10, COMMA=11, EQUALS=12, NOT=13, 
		MULTIPLY=14, DIVIDE=15, LESSTHAN=16, GREATERTHAN=17, INT=18, MAIN=19, 
		OUT=20, IF=21, ELSE=22, WHILE=23, BREAK=24, CONTINUE=25, NEW=26, IDENTIFIER=27, 
		Discard=28, DiscardComment=29;
	public static final int
		RULE_compilationUnit = 0, RULE_mainFunctionDeclaration = 1, RULE_mainFunctionBody = 2, 
		RULE_mainBlock = 3, RULE_mainBlockStatements = 4, RULE_mainBlockStatement = 5, 
		RULE_block = 6, RULE_blockStatements = 7, RULE_blockStatement = 8, RULE_statement = 9, 
		RULE_breakStatement = 10, RULE_continueStatement = 11, RULE_ifElseStatement = 12, 
		RULE_whileStatement = 13, RULE_outputStatement = 14, RULE_declarationStatement = 15, 
		RULE_declarations = 16, RULE_declaration = 17, RULE_expressionStatement = 18, 
		RULE_emptyStatement = 19, RULE_expression = 20, RULE_assignmentExpression = 21, 
		RULE_assignment = 22, RULE_leftHandSide = 23, RULE_equalityExpression = 24, 
		RULE_relationalExpression = 25, RULE_additiveExpression = 26, RULE_multiplicativeExpression = 27, 
		RULE_unaryExpression = 28, RULE_castExpression = 29, RULE_primary = 30, 
		RULE_primaryNoNewArray = 31, RULE_parenExpression = 32, RULE_literal = 33, 
		RULE_identifier = 34, RULE_arrayCreationExpression = 35, RULE_arrayType = 36, 
		RULE_dimensionExpression = 37, RULE_dimensions = 38, RULE_dimension = 39, 
		RULE_arrayAccess = 40;
	public static final String[] ruleNames = {
		"compilationUnit", "mainFunctionDeclaration", "mainFunctionBody", "mainBlock", 
		"mainBlockStatements", "mainBlockStatement", "block", "blockStatements", 
		"blockStatement", "statement", "breakStatement", "continueStatement", 
		"ifElseStatement", "whileStatement", "outputStatement", "declarationStatement", 
		"declarations", "declaration", "expressionStatement", "emptyStatement", 
		"expression", "assignmentExpression", "assignment", "leftHandSide", "equalityExpression", 
		"relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "castExpression", "primary", "primaryNoNewArray", "parenExpression", 
		"literal", "identifier", "arrayCreationExpression", "arrayType", "dimensionExpression", 
		"dimensions", "dimension", "arrayAccess"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'int'", "'main'", "'out'", "'if'", 
		"'else'", "'while'", "'break'", "'continue'", "'new'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INTEGER_LITERAL", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LSQBRACK", 
		"RSQBRACK", "SEMICOLON", "PLUS", "MINUS", "COMMA", "EQUALS", "NOT", "MULTIPLY", 
		"DIVIDE", "LESSTHAN", "GREATERTHAN", "INT", "MAIN", "OUT", "IF", "ELSE", 
		"WHILE", "BREAK", "CONTINUE", "NEW", "IDENTIFIER", "Discard", "DiscardComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "T.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  // grab location info (filename/line/column) from token
	  // in order to stick into AST nodes for later error reporting
	  public Location loc(final Token token)
	  {
	    return new Location(getSourceName(), token.getLine(),
	      token.getCharPositionInLine());
	  }

	  // root of AST is stored here
	  // set by the action for the start symbol
	  private CompilationUnit semanticValue;
	  public CompilationUnit getSemanticValue()
	  {
	    return semanticValue;
	  }

	public TParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public MainFunctionDeclarationContext mfd;
		public TerminalNode EOF() { return getToken(TParser.EOF, 0); }
		public MainFunctionDeclarationContext mainFunctionDeclaration() {
			return getRuleContext(MainFunctionDeclarationContext.class,0);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((CompilationUnitContext)_localctx).mfd = mainFunctionDeclaration();
			setState(83);
			match(EOF);
			 semanticValue = buildCompilationUnit(loc(_localctx.start), ((CompilationUnitContext)_localctx).mfd.lval,
			        new ArrayList<ClassDeclaration>()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionDeclarationContext extends ParserRuleContext {
		public List<Statement> lval;
		public MainFunctionBodyContext mfb;
		public TerminalNode INT() { return getToken(TParser.INT, 0); }
		public TerminalNode MAIN() { return getToken(TParser.MAIN, 0); }
		public TerminalNode LPAREN() { return getToken(TParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TParser.RPAREN, 0); }
		public MainFunctionBodyContext mainFunctionBody() {
			return getRuleContext(MainFunctionBodyContext.class,0);
		}
		public MainFunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunctionDeclaration; }
	}

	public final MainFunctionDeclarationContext mainFunctionDeclaration() throws RecognitionException {
		MainFunctionDeclarationContext _localctx = new MainFunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainFunctionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(INT);
			setState(87);
			match(MAIN);
			setState(88);
			match(LPAREN);
			setState(89);
			match(RPAREN);
			setState(90);
			((MainFunctionDeclarationContext)_localctx).mfb = mainFunctionBody();
			 ((MainFunctionDeclarationContext)_localctx).lval =  ((MainFunctionDeclarationContext)_localctx).mfb.lval; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionBodyContext extends ParserRuleContext {
		public List<Statement> lval;
		public MainBlockContext mb;
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public MainFunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunctionBody; }
	}

	public final MainFunctionBodyContext mainFunctionBody() throws RecognitionException {
		MainFunctionBodyContext _localctx = new MainFunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainFunctionBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((MainFunctionBodyContext)_localctx).mb = mainBlock();
			 ((MainFunctionBodyContext)_localctx).lval =  ((MainFunctionBodyContext)_localctx).mb.lval; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainBlockContext extends ParserRuleContext {
		public List<Statement> lval;
		public MainBlockStatementsContext mbs;
		public TerminalNode LBRACK() { return getToken(TParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TParser.RBRACK, 0); }
		public MainBlockStatementsContext mainBlockStatements() {
			return getRuleContext(MainBlockStatementsContext.class,0);
		}
		public MainBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlock; }
	}

	public final MainBlockContext mainBlock() throws RecognitionException {
		MainBlockContext _localctx = new MainBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LBRACK);
			setState(97);
			((MainBlockContext)_localctx).mbs = mainBlockStatements(0);
			setState(98);
			match(RBRACK);
			 ((MainBlockContext)_localctx).lval =  ((MainBlockContext)_localctx).mbs.lval; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainBlockStatementsContext extends ParserRuleContext {
		public List<Statement> lval;
		public MainBlockStatementsContext mbss;
		public MainBlockStatementContext mbs;
		public MainBlockStatementContext mainBlockStatement() {
			return getRuleContext(MainBlockStatementContext.class,0);
		}
		public MainBlockStatementsContext mainBlockStatements() {
			return getRuleContext(MainBlockStatementsContext.class,0);
		}
		public MainBlockStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlockStatements; }
	}

	public final MainBlockStatementsContext mainBlockStatements() throws RecognitionException {
		return mainBlockStatements(0);
	}

	private MainBlockStatementsContext mainBlockStatements(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MainBlockStatementsContext _localctx = new MainBlockStatementsContext(_ctx, _parentState);
		MainBlockStatementsContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_mainBlockStatements, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(102);
			((MainBlockStatementsContext)_localctx).mbs = mainBlockStatement();
			 ((MainBlockStatementsContext)_localctx).lval =  new ArrayList<Statement>(); _localctx.lval.add(((MainBlockStatementsContext)_localctx).mbs.lval); 
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MainBlockStatementsContext(_parentctx, _parentState);
					_localctx.mbss = _prevctx;
					_localctx.mbss = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_mainBlockStatements);
					setState(105);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(106);
					((MainBlockStatementsContext)_localctx).mbs = mainBlockStatement();
					 ((MainBlockStatementsContext)_localctx).mbss.lval.add(((MainBlockStatementsContext)_localctx).mbs.lval); ((MainBlockStatementsContext)_localctx).lval =  ((MainBlockStatementsContext)_localctx).mbss.lval; 
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MainBlockStatementContext extends ParserRuleContext {
		public Statement lval;
		public BlockStatementContext bs;
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public MainBlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlockStatement; }
	}

	public final MainBlockStatementContext mainBlockStatement() throws RecognitionException {
		MainBlockStatementContext _localctx = new MainBlockStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mainBlockStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((MainBlockStatementContext)_localctx).bs = blockStatement();
			 ((MainBlockStatementContext)_localctx).lval =  ((MainBlockStatementContext)_localctx).bs.lval; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Block lval;
		public BlockStatementsContext bs;
		public TerminalNode LBRACK() { return getToken(TParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TParser.RBRACK, 0); }
		public BlockStatementsContext blockStatements() {
			return getRuleContext(BlockStatementsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(LBRACK);
				setState(118);
				((BlockContext)_localctx).bs = blockStatements(0);
				setState(119);
				match(RBRACK);
				 ((BlockContext)_localctx).lval =  buildBlock(loc(_localctx.start), ((BlockContext)_localctx).bs.lval); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(LBRACK);
				setState(123);
				match(RBRACK);
				 ((BlockContext)_localctx).lval =  buildBlock(loc(_localctx.start), new ArrayList<Statement>()); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
